package org.hfeng.book.dpj.ch1.iterator;

public interface Aggregate {
    public abstract Iterator iterator();
}
