package org.hfeng.book.dpj.ch1.iterator;

public interface Iterator {
    public abstract boolean hasNext();
    public abstract Object next();
}
